# frontend/lib/openapi.json
@@ -5,6 +5,24 @@
     "version": "0.1.0"
   },
   "paths": {
+    "/api/my-weeks": {
+      "get": {
+        "summary": "My Weeks",
+        "operationId": "my_weeks_api_my_weeks_get",
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ApiResponse_list_dict_str__Any___"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/player-sheets": {
       "get": {
         "summary": "Player Sheets",
